Fix HTML encoding issues in cart.html

--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
   <!------------headeri----->
   <header class="site-header">
     <div class="container header__inner">
-      <a href="homepage.html" class="logo">Exclusive</a>
+      <a href="index.html" class="logo">Exclusive</a>
 
       <nav class="nav">
         <button class="nav__toggle" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
         </button>
 
         <ul class="nav__list">
-          <li><a href="homepage.html" class="nav__link">Home</a></li>
+          <li><a href="index.html" class="nav__link">Home</a></li>
           <li><a href="contact.html" class="nav__link">Contact</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="signup.html" class="nav__link">Sign Up</a></li>
@@ -56,7 +56,7 @@
   <main class="main cart-main">
     <div class="container">
       <nav class="breadcrumb">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <span>/</span>
         <span>Cart</span>
       </nav>
@@ -215,3 +215,4 @@
 
 </body>
 </html>
+
