--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
 
   <header class="site-header">
     <div class="container header__inner">
-      <a href="homepage.html" class="logo">Exclusive</a>
+      <a href="index.html" class="logo">Exclusive</a>
 
       <nav class="nav">
         <button class="nav__toggle" aria-label="Toggle navigation">
           <span></span><span></span><span></span>
         </button>
         <ul class="nav__list">
-          <li><a href="homepage.html" class="nav__link">Home</a></li>
+          <li><a href="index.html" class="nav__link">Home</a></li>
           <li><a href="contact.html" class="nav__link nav__link--active">Contact</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="signup.html" class="nav__link">Sign Up</a></li>
@@ -50,7 +50,7 @@
   <main class="main contact-main">
     <div class="container">
       <div class="contact-breadcrumb">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <span>/</span>
         <span>Contact</span>
       </div>
@@ -160,3 +160,4 @@
   </footer>
 </body>
 </html>
+
