--- a/wishlist.html
+++ b/wishlist.html
@@ -24,14 +24,14 @@
   <!--------------headeri-------->
   <header class="site-header">
     <div class="container header__inner">
-      <a href="homepage.html" class="logo">Exclusive</a>
+      <a href="index.html" class="logo">Exclusive</a>
 
       <nav class="nav">
         <button class="nav__toggle" aria-label="Toggle navigation">
           <span></span><span></span><span></span>
         </button>
         <ul class="nav__list">
-          <li><a href="homepage.html" class="nav__link">Home</a></li>
+          <li><a href="index.html" class="nav__link">Home</a></li>
           <li><a href="contact.html" class="nav__link">Contact</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="signup.html" class="nav__link">Sign Up</a></li>
@@ -53,7 +53,7 @@
     <section class="page-header">
       <div class="container">
         <p class="breadcrumb">
-          <a href="homepage.html">Home</a> / <span>Wishlist</span>
+          <a href="index.html">Home</a> / <span>Wishlist</span>
         </p>
 
         <div class="page-header__top">
@@ -289,3 +289,4 @@
 
 </body>
 </html>
+
