--- a/wishlist.html
+++ b/wishlist.html
@@ -35,6 +35,7 @@
           <li><a href="contact.html" class="nav__link">Contact</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="signup.html" class="nav__link">Sign Up</a></li>
+          <li><a href="shop.html" class="nav__link">Shop</a></li>
         </ul>
       </nav>
 
@@ -289,4 +290,5 @@
 
 </body>
 </html>
+
 
