--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
           <li><a href="contact.html" class="nav__link">Contact</a></li>
           <li><a href="about.html" class="nav__link nav__link--active">About</a></li>
           <li><a href="signup.html" class="nav__link">Sign Up</a></li>
+          <li><a href="shop.html" class="nav__link">Shop</a></li>
         </ul>
       </nav>
 
@@ -218,5 +219,6 @@
 
 </body>
 </html>
+
 
 
